# mash

./: .gitignore  CMakeLists.txt  README.md  mash.c  mash.cpp
MiniBash/: CMakeLists.txt  cmd.cpp  cmd.hpp  configs.cpp  configs.hpp  history.cpp  history.hpp  mash.cpp
MiniBash.xcodeproj/: project.pbxproj
MiniBash.xcodeproj/project.xcworkspace/xcuserdata/chigozieoduah.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
MiniBash.xcodeproj/xcuserdata/chigozieoduah.xcuserdatad/xcschemes/: xcschememanagement.plist
